<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history"/>
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_collect"
            android:title="@string/nav_collect"/>
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_book"
            android:title="@string/nav_book"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_away"
            android:title="@string/nav_away" />
    </group>
</menu>